# HUP-BRB

./: .gitignore  README.md  hup  hup_build  map_name.data
doc/: Documentation.docx
path2/: metadata.yaml
sjowmm_ws/src/simulation/: setup.cfg  setup.py
sjowmm_ws/src/simulation/launch/: sim_launch.py
src/dede/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/dede/config/nav2/: bt_navigator.yaml  controller_dwb.yaml  planner.yaml
src/dede/config/slam/: localization.yaml  mapping.yaml
src/dede/doc/: Mapping_Navigation.md  README.md  Simulation.md
src/dede/launch/: multi_nav2_slam.launch.py  multi_simulation.launch.py  nav2_slam.launch.py  rviz2.launch.py  simulation.launch.py  slam_toolbox.launch.py
src/dede/maps/: critical_point1.data  nox_maze.data  open_space_map.data
src/dede/models/dede/: model.config  model.sdf
src/dede/models/dede_maze/: model.config  model.sdf
src/dede/urdf/: dede.urdf
src/dede/worlds/: base_maze.model  critical_point1.world  critical_point2.world  maze_only.model  model.config  model.sdf  open_space.world  testing.world  warehouse.world
src/dede/worlds/critical_point1/: model.config  model.sdf
src/dede/worlds/critical_point2/: model.config  model.sdf
src/hupbrb/: README.md  package.xml  setup.cfg  setup.py
src/hupbrb/config/: camera.yaml
src/hupbrb/hupbrb/: CriticalPointController.py  IdScanner.py  PriorityController.py  collision.py
src/hupbrb/launch/: prio_nav.launch.py
src/hupbrb_msgs/: CMakeLists.txt  package.xml
src/hupbrb_msgs/msg/: Collision.msg  CollisionPoint.msg  Identifier.msg  Priority.msg  RobotInformation.msg
src/hupbrb_msgs/srv/: Handshake.srv
src/path_projection/: package.xml  setup.cfg  setup.py
src/path_projection/launch/: path_projection_launch.py
src/path_projection/path_projection/: multi_path_projection_node.py  path_projection_node.py
src/priority_based_robot_costmap_plugin/: CMakeLists.txt  README.md  package.xml  robot_collision_layer.xml
src/priority_based_robot_costmap_plugin/include/priority_based_robot_costmap_plugin/: robot_collision_layer.hpp
src/priority_based_robot_costmap_plugin/include/robot_collision_layer/: robot_collision_layer.hpp
src/priority_based_robot_costmap_plugin/src/: robot_collision_layer.cpp
src/simulation/: package.xml  setup.py
src/simulation/launch/: sim_launch.py  spawn_launch.py  spawn_robot_launch.py  spawn_robot_srv_launch.py
src/simulation/models/: model.config  model.sdf
src/simulation/simulation/: spawn_robot_srv.py
src/simulation/temp/: model.config  model.sdf
src/simulation/urdf/: turtlebot3_waffle_pi.urdf
src/simulation/worlds/: waffle_pi.model
(+11 files in other folders)
